--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 
 <h1>kino-chino handyman</h1>
 <p>under maintenance</p>
+  <br />
+
+
+<div data-pro-badge-shopper-uuid=91bcc317-93bd-4f93-82d3-5bad70df8b9f data-pro-badge-mode=dark style="width:200px"></div> 
+<script defer src="https://pro.godaddy.com/static/js/badge.js"></script>  
 
 </body>
 </html> 
