--- a/index.html
+++ b/index.html
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kino Handyman Services</title>
+    <style>
+        /* Basic styling for the website */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1em;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2em;
+        }
+        .services-list {
+            list-style: none;
+            padding: 0;
+        }
+        .service-item {
+            margin-bottom: 1em;
+        }
+    </style>
+</head>
 <body>
+    <header>
+        <h1>Kino Handyman Services</h1>
+    </header>
+    <div class="container">
+        <h2>Kino and Chino Services</h2>
+        <ol>
+            <li class="service-item">Door hinges fixing or installation</li>
+            <li class="service-item">Carpentry hinges fixing or installation</li>
+            <li class="service-item">Gabarge disposal (kitchen) fixing or installation</li>
+            <li class="service-item">Faucets installation</li>
+            <li class="service-item">Cleaning Wall Heater</li>
+            <li class="service-item">Cleaning AC outside</li>
+            <li class="service-item">Drywall Sheets replacing or fixing</li>
 
-<h1>kino-chino handyman</h1>
-<p>under maintenance</p>
-  <br />
-
-
-<div data-pro-badge-shopper-uuid=91bcc317-93bd-4f93-82d3-5bad70df8b9f data-pro-badge-mode=dark style="width:200px"></div> 
-<script defer src="https://pro.godaddy.com/static/js/badge.js"></script>  
-
+            <!-- Add more services as needed -->
+        </ol>
+        <p>Contact Kino at <a href="tel:(408) 508-1772">(408) 508-1772</a> or email Kino at <a href="mailto:diiemnguyen@yahoo.com?Subject=kinohandyman_services">diiemnguyen@yahoo.com</a> for your home repair needs!</p>
+    </div>
+  <div data-pro-badge-shopper-uuid=91bcc317-93bd-4f93-82d3-5bad70df8b9f data-pro-badge-mode=dark style="width:200px"></div> 
+<script defer src="https://pro.godaddy.com/static/js/badge.js"></script> 
+  
+    <script>
+        // Example JavaScript functionality (optional)
+        const phoneNumber = document.querySelector('a[href^="tel"]');
+        phoneNumber.addEventListener('click', () => {
+            alert('Thank you for considering our handyman services! We will be in touch shortly.');
+        });
+    </script>
 </body>
-</html> 
+</html>
+
+
+ 
