--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 
     <meta name="keywords" content="fixing, installation, cleaning, maintenance homes and residentials">
     <meta name="description" content="kino handyman: We serves in the Bay Area, California. Email: kino.salinasb@gmail.com">
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB7G2RL05X"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-XB7G2RL05X');
+    </script>
+
+
     <meta name="dcterms.title" content="kinohandyman">
     <meta name="dcterms.identifier" content="https://portfolio.diemweb.com/">
     <meta name="dcterms.description" content="fixing, installation, cleaning, maintenance homes and residentials in Bay Area, California. Email: kino.salinasb@gmail.com | Phone:4084179041">
