--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 </head>
 <body>
     <header>
-        <div id="set_img"><img src="img/logo_long.png" alt="kino"></div>
+        <a href="https://kino.diemweb.com"><div id="set_img"><img src="img/logo_long.png" alt="kino"></div></a>
     </header>
     <div class="container">
         <h2>
@@ -150,7 +150,7 @@
             &nbsp;&nbsp;&nbsp;
             <span class="set_email">Email:</span> <a href="mailto:diiemnguyen@yahoo.com?Subject=kinohandyman_services">kino.salinasb@gmail.com</a>
             &nbsp;&nbsp;&nbsp;
-            <span class="set_web">Web:</span> <a href="https://kino.diemweb.com" target="_blank">https://kino.diemweb.com</a>
+            <span class="set_web">Web:</span> <a href="https://kino.diemweb.com">https://kino.diemweb.com</a>
 
         </h2>
         <h2>Services in Santa Clara, California</h2>
