--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 1em;
+            padding: 0em 0em 0.2em 0em;
         }
 
         h2 > a:hover {
