--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta property="og:image" itemprop="image" content="https://kino.diemweb.com/img/kino_card.png">
 
     <title>Kino Handyman Services</title>
-
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon16x16.png">
     <style>
         /* Basic styling for the website */
         body {
